added block2 and icons

--- a/app/index.html
+++ b/app/index.html
@@ -22,16 +22,46 @@
     <div class="block2">
         <div class="container">
             <ul class="block2_ul">
-                <li class="block2_li">
-                    
+                <li class="block2_block">
+                    <object data="images/icons/1.svg" type="image/svg+xml" class="block2_ico block2_ico1"></object>
+                    <h3 class="block2_h3">Отличная погода</h3>
+                    <p class="block2_p">В феврале в Турции, в Белеке, а наш отель раположен именно здесь средняя температура днем 15-18 градусов, что является идеальной погодой для бега</p>         
                 </li>
-                <li class="block2_li"></li>
-                <li class="block2_li"></li>
-                <li class="block2_li"></li>
-                <li class="block2_li"></li>
-                <li class="block2_li"></li>
-                <li class="block2_li"></li>
-                <li class="block2_li"></li>
+                <li class="block2_block">
+                    <object data="images/icons/2.svg" type="image/svg+xml" class="block2_ico block2_ico2"></object>
+                    <h3 class="block2_h3">Условия для тренировок</h3>
+                    <p class="block2_p">Рядом с нашим отелей расположено несколько гольф полей, бегая вдоль которых, можно сделать круг до 10км с различным рельефом</p>                    
+                </li>
+                <li class="block2_block">
+                    <object data="images/icons/3.svg" type="image/svg+xml" class="block2_ico block2_ico3"></object>
+                    <h3 class="block2_h3">Отсутствие беговых проблем</h3>
+                    <p class="block2_p">Здесь вы совместите приятный отдых с возможностью качественно потренироваться</p>                    
+                </li>
+                <li class="block2_block">
+                    <object data="images/icons/4.svg" type="image/svg+xml" class="block2_ico block2_ico4"></object>
+                    <h3 class="block2_h3">Современный стадион</h3>
+                    <p class="block2_p">в 5 км от отеля расположен современный стадион, со всем необходимым и даже диковинным для обывателя из России</p>                    
+                </li>
+                <li class="block2_block">
+                    <object data="images/icons/5.svg" type="image/svg+xml" class="block2_ico block2_ico5"></object>
+                    <h3 class="block2_h3">Хорошая компания</h3>
+                    <p class="block2_p">На наш сбор едут образованные и интересные люди, объединенные одной любовью - любовью к бегу</p>                    
+                </li>
+                <li class="block2_block">
+                    <object data="images/icons/6.svg" type="image/svg+xml" class="block2_ico block2_ico6"></object>
+                    <h3 class="block2_h3">Профессиональные тренера</h3>
+                    <p class="block2_p">Наши тренера в этот период подготовки скорректируют вашу технику бега и сделают ваши мышцы сильными, что впоследствии скажется на скорости бега</p>                    
+                </li>
+                <li class="block2_block">
+                    <object data="images/icons/7.svg" type="image/svg+xml" class="block2_ico block2_ico7"></object>
+                    <h3 class="block2_h3">Сервис</h3>
+                    <p class="block2_p">В тур уже входит питание по системе шведский стол и все необходимые восстановительные процедуры</p>                    
+                </li>
+                <li class="block2_block">
+                    <object data="images/icons/8.svg" type="image/svg+xml" class="block2_ico block2_ico8"></object>
+                    <h3 class="block2_h3">Качественный тренинг</h3>
+                    <p class="block2_p">Эффект от наших тренировок будет намного выше, чем дома.</p>
+                </li>
             </ul>
         </div>
     </div>
