bug fix at 320px

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="description">
                 <h1 class="description_h1">Сборы в Турции с опытным тренером</h1>
-                <h2 class="description_date">Со 2го по 16 февраля 2017 года</h2>
+                <h2 class="description_date">Со 2 по 16 февраля 2017 года</h2>
                 <p class="description_about">Турция - идеальное место для февральских сборов всего в 3 часах лета от Москвы, в то время как в России ещё много снега и холодно, здесь есть возможность бегать по грунту с хорошей компанией.</p>
                 <buttom class="block1_btn btn">Забронировать место</buttom>
             </div> 
